copy and spacing fixes

--- a/src/components/billions.css
+++ b/src/components/billions.css
@@ -23,26 +23,24 @@
         margin-top:6%;
     }
     .explainer1{
-        margin-left:5%;
+        padding-left:10%;
         padding-top:10%;
         width:40%;
         font-size: large;
-        padding-bottom:10%;
+        padding-bottom:14%;
     }
     .explainer2{
         margin-top:0%;
-        margin-left:8%;
         width:40%;
         font-size: large;
+        padding-left:10%;
         padding-bottom:10%;
     }
     .layer{
-        margin-left:3%;
-        padding-left:10%;
         margin-top:0%;
     }
     .payments{
-        padding-left:0%;
         margin-top:-10%;
+        margin-left:10%;
     }
 }
